[gd_scene load_steps=4 format=3 uid="uid://bd1cfbd74dg5i"]

[ext_resource type="Script" path="res://Scenes/PauseMenu.gd" id="1_t37qp"]

[sub_resource type="LabelSettings" id="LabelSettings_c6gf2"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_a3fd0"]
font_size = 18

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_t37qp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203922, 0.207843, 0.278431, 0.533333)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBContainerTitle" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Menu TItle" type="Label" parent="MarginContainer/VBContainerTitle"]
layout_mode = 2
text = "Paused!!"
label_settings = SubResource("LabelSettings_c6gf2")
horizontal_alignment = 1

[node name="VBContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="MarginContainer/VBContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Go to Main Menu"

[node name="Warning Label" type="Label" parent="MarginContainer/VBContainer"]
visible = false
layout_mode = 2
text = "Progress Will be lost!!!"
label_settings = SubResource("LabelSettings_a3fd0")
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBContainer/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBContainer/MainMenuButton" to="." method="_on_main_menu_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
